--- a/vsc leahzone.html
+++ b/vsc leahzone.html
@@ -26,11 +26,11 @@
 
     
 <p>
-    Upon receipt of thy latest epistle I didst bellow to the heavens: "WAHOOOOO", and thereupon didst perform a triple backflip, miscalculating the landing and extinguishing my life. Thereafter I learned how to make a html website which I probably would have accomplished in school had I paid attention; here it is.* Probably this is best viewed on desktop but I'm not in charge a your life. What format is this, the Dotcom-nostalgic revealed through the QR wormhole &amp; transmitted by way of the postcard. And what a naked form a postcard is. Any time I get one I'm wondering what the nosy postie reckons, sly flatmates, overbearing wildlife. Hello to them. A person can only overhear something of interest. Do you know your postperson? I always thought mine was a deadbeat (where does this term come from) dad (of a fella what I went to school with (raised by his grandma)) but on reflection he was just absent every day from picking up or dropping off his baby boy because he was busy working. Stamp stamp across the planet. Circumvents the handwriting issue, write/right?** But websites too - and this is <i>technically</i> public - are nakeder, right, like I could've sent an email &amp; CC'd the whole world, rumbling myself around in a million junkboxes. Let me then pompously ad[d]ress. There are things we live among 'and to see them is to slow ourselves'. These days I only look at htmls when I'm trying to find something very specific in the Gutenberg stuff (Moby dick; Stein), or hamlet MIT, whatever (the CTRL and F keys in harmony as dowsing rods)
+    Upon receipt of thy latest epistle I didst bellow to the heavens: "WAHOOOOO", and thereupon didst perform a triple backflip, miscalculating the landing and extinguishing my life. Thereafter I learned how to make a html website which I probably would have accomplished in school had I paid attention; here it is.* Probably this is best viewed on desktop but I'm not in charge a you. What format is this, the Dotcom-nostalgic revealed through the QR wormhole &amp; transmitted by way of the postcard. And what a naked form a postcard is. Any time I get one I'm wondering what the nosy postie reckons, sly flatmates, overbearing wildlife. Hello to them. A person can only overhear something of interest. Do you know your postperson? I always thought mine was a deadbeat (where does this term come from) dad (of a fella what I went to school with (raised by his grandma)) but on reflection he was just absent every day from picking up or dropping off his baby boy because he was busy working. Stamp stamp across the planet. Circumvents the handwriting issue, write/right?** But websites too - and this is <i>technically</i> public - are nakeder, right, like I could've sent an email &amp; CC'd the whole world, rumbling myself around in a million junkboxes. Let me then pompously ad[d]ress. There are things we live among 'and to see them is to slow ourselves'. The pencil has "a grip". I like to write an email from time to time because it feels like I'm bothering with something/one. These days I only look at htmls when I'm trying to find something very specific in the Gutenberg stuff (Moby dick; Stein), or hamlet MIT, whatever (the CTRL and F keys in harmony as dowsing rods)
 
 </p>
 
-    <center><img src="Clutter/Pics/Tsar Bell Man.jpg" width="500px">1986</center>
+    <center><img src="Tsar Bell Man.jpg" width="500px">1986</center>
 
 <p>
 
@@ -38,24 +38,24 @@
 
 </p>
 
-<center><img src="Clutter/Pics/Hohhot pagoda.jpg" width="500px">1942</center>
+<center><img src="Hohhot pagoda.jpg" width="500px">1942</center>
 
 <p>
 
-    I've been obsessed with the terms in which obsession is described lately, I keep reading sentences which start with "I've been obsessed with..." Which all more or less turn out to mean 'the author has read a couple wikipedias'. Obsession ≠ dedication, immersion; cultivated idiosyncrasies, fine-combed irregularity. Ho ho ho (spake the jolly philanthropist). This evening I am managing bars and my parents are to eat something that calls itself 87% british chicken. Le society methinks???? I go back and back and throw up about poetry because I'm not in the mood hardly ever to read wank. I hate all the curlews-and-lakes pomposity about as much as I'm against all these public school ass faces (plenty). The amount of award-winning poets I met who grew up in Dubai or have an uncle writing for the observer, the lrb, I groan I gurgle. Look I know it's hardly news. Right now I've the patience pretty much only for Sean Bonney and only in small doses and because he's dead in a really modern way. You've encountered, he's that fella what did the fuck the police poem (which you can find in the lovely <i>Letters Against the Firmament</i> and which I steal from). I have a pdf of his last book, <i>Our Death</i>, if you want. He's propa Bri'ish but was one of them that moved to Berlin (under the cover of 'academic' ''work'') and I feel both and neither ways about this, Berlin as the trust-fundy thinking-themselves-bohemian destination for the euroyuppie, or was, until covid and it seems to have been dethroned, for where I know not. When I was in B a couple years ago I liked it in ways &amp; was there on my own walking stomping but felt I held it all at arms length. The flaneur (he/him) must wa(l/n)k off his century. I'm not calling Sean one of those. He's the only radical poet the uk ever produced that I can think of right now (I'm not trying).*** Whose radical huh, your radical, my radical? The radicle ruticle cuticle? While ago I read a eulogy for SB by I think Fran Lock (whom I like) which breathlessly described him as 'a European'. Of course I blehhhhhhhed about this, such a wanky FBPE-y sentiment, the kind you can only really get in british 'politics'.**** Let us rub ourselves to the thought of the west. West a territory entirely composed of last bastions, and which it is the job of liberalism (huh?) to deusvult defend (I can walk) is that right am I alluding to the eastern front (which one). So it's cool and trendy to say we must defend 'our' 'borders' from the faceless eastern horde &amp; the right seem to say but we like the horde the horde stronk. But this is all a recent development and entirely factual. 'And to see them is to stroke ourselves'. How did I get here. I hope you are well. In light - in light of recent events.
+    I've been obsessed with the terms in which obsession is described lately, I keep reading sentences which start with "I've been obsessed with..." Which all more or less turn out to mean 'the author has read a couple wikipedias'. Obsession ≠ dedication, immersion; cultivated idiosyncrasies, fine-combed irregularity. Ho ho ho (spake the jolly philanthropist). This evening I am managing bars and my parents are to eat something that calls itself 87% british chicken. Le society methinks???? I go back and back and throw up about poetry because I'm not in the mood hardly ever to read wank. I hate all the curlews-and-lakes pomposity about as much as I'm against all these public school ass faces (plenty). The amount of award-winning poets I met who grew up in Dubai or have an uncle writing for the observer, the lrb, I groan I gurgle. Look I know it's hardly news. Right now I've the patience pretty much only for Sean Bonney and only in small doses and because he's dead in a really modern way. You've encountered, he's that fella what did the fuck the police poem (which you can find in the lovely <i>Letters Against the Firmament</i> and which I steal from). I have a pdf of his last book, <i>Our Death</i>, if you want. He's propa Bri'ish but was one of them that moved to Berlin (under the cover of 'academic' ''work'') and I feel both and neither ways about this, Berlin as the trust-fundy thinking-themselves-bohemian destination for the euroyuppie, or was, until covid and it seems to have been dethroned, for where I know not. When I was in B a couple years ago I liked it in ways &amp; was there on my own walking stomping but felt I held it all at arms length. The flaneur (he/him) must wa(l/n)k off his century. I'm not calling Sean one of those. He's the only radical poet the uk ever produced that I can think of right now (I'm not trying).*** Whose radical huh, your radical, my radical? The radicle ruticle cuticle? While ago I read a eulogy for SB by I think Fran Lock (whom I like) which breathlessly described him as 'a European'. Of course I blehhhhhhhed about this, such a wanky FBPE-y sentiment, the kind you can only really get in british 'politics'.**** Let us rub ourselves to the thought of the west. West a territory entirely composed of last bastions, and which it is the job of liberalism (huh?) to deusvult defend (I can walk) is that right am I alluding to the eastern front (which one). So it's cool and trendy to say we must defend 'our' 'borders' from the faceless eastern horde &amp; the right seem to say but we like the horde the horde stronk. But this is all a recent development and entirely factual. 'And to see them is to stroke ourselves'. Cow-boy dreams. How did I get here. I hope you are well. In light - in light of recent events.
 
 <br><br>
 
-    <img src="Clutter/Pics/nice-rich.jpeg" width="400px">2021 <img src="Clutter/Pics/cocktail crayon.jpeg" height="400px">2025
+    <img src="nice-rich.jpeg" width="400px">2021 <img src="cocktail crayon.jpeg" height="400px">2025
 
 <br><br>
 
 
-    Did you ever try to read Serbian with all your knowledge. I have been having goes the past few days &amp; it do make me giggle. I never really lost the bit of Russian I got in sta but it's rusted & oh god the grammar. So to get a mishmash Cyrillic is just a treat. I've gotta end up Belgrade one of these days. The political is only ever the useless right (right)? To confess something big: I get a line from ms Anne Boyer running around in my head often enough. Closing her poem a woman shopping: <i>how could it [this book] be literature if it is not coyly against literature, but sincerely against it, as it is also against ourselves?</i> It's almost glib, but not quite, and troubling in the way climate change seems (to me, a white brit)(this is a total non-sequitur and entirely personal). Cheaply, 'against' can be spatialised and horny &amp; maybe there's a sidelong look at that but i don't think Anne's fully interested in entertaining it, what's being said is more complicated and challenging. Actually I believe in Anne more than I believe in just about anybody. These past few months I have been absurdly asexual but I get to assign that to wage labour &amp; having no free time outside work rather than having to reflect &amp; consider my own phantasie. It's not interesting but I feel like I'm saying things here. A breeze will keep on going, angel's trash (hurricane). Yeah chagall. There are things we live among.    
+    Did you ever try to read Serbian with all your knowledge. I have been having goes the past few days &amp; it do make me giggle. I never really lost the bit of Russian I got in sta but it's rusted & oh god the grammar. So to get a mishmash Cyrillic is just a treat. I've gotta end up Belgrade one of these days. The political is only ever the useless right (right)? To confess something big: I get a line from ms Anne Boyer running around in my head often enough. Closing her poem a woman shopping: <i>how could it [this book] be literature if it is not coyly against literature, but sincerely against it, as it is also against ourselves?</i> It's almost glib, but not quite, and troubling in the way climate change seems (to me, a white brit)(this is a total non-sequitur and entirely personal). Cheaply, 'against' can be spatialised and horny &amp; maybe there's a sidelong look at that but i don't think Anne's fully interested in entertaining it, what's being said is more complicated and challenging. Actually I believe in Anne more than I believe in just about anybody. These past few months I have been absurdly asexual but I get to assign that to wage labour &amp; having no free time outside work rather than having to reflect &amp; consider my own phantasie. It's not interesting but I feel like I'm saying things here. That is to say I keep meeting people intensely and only figuring it out later. Which is to say I was down and out behind venetians in a trench; in walks a dame with a smoking revolver. Gravity's hardly for us, Hashimoto-San. A breeze will keep on going, angel's trash (hurricane), eyes emoji. Yeah chagall. There are things we live among.    
     
 <br><br>
 
-<img src="Clutter/Pics/matisse polyphemus.jpeg" width="400px">1935 <img src="Clutter/Pics/chagall 7 fingers.jpeg" width="420px">1913
+<img src="matisse polyphemus.jpeg" width="400px">1935 <img src="chagall 7 fingers.jpeg" width="420px">1913
 
 <br>
 
@@ -68,7 +68,7 @@
 
 </p>
 
-<img src="Clutter/Pics/squat lobster.jpeg" width="500px">2006 <img src="Clutter/Pics/Eystein.jpg" width="500px">c.800
+<img src="squat lobster.jpeg" width="500px">2006 <img src="Eystein.jpg" width="500px">c.800
 
 <p>
 
@@ -76,33 +76,33 @@
 
 </p>
 
-<center><img src="Clutter/Pics/google maps discoveries/inaccessible island.png" width="500px">2023</center> 
+<center><img src="inaccessible island.png" width="500px">2023</center> 
 
 <p>
 
-    A fetish for no time but later (the imp(o/a)ssible future). Lettre a un prêt: je n'ai aucune expérience du priere. Caffé et croissant s'il vous plaît. Look forward to my debut trip-hop EP, The Philosophy of Rick and Morty. I read a book by Oxana Timofeeva <i>SOLAR POLITICS</i> which makes a case for the sun as a comrade, and I want to believe that in the seasonal murk, but it's hard for me to see beyond sun-worship in the fascistic sense (L'etat; le tat), the black sun. Munch's sun? I guess probably the Chinese sun people know. When I went to MOMA it kicked me in the head and said remember this matters dickhead &amp; I said yes sir of course sir; the met was a bit of a letdown by comparison. Whichever curator at the Guggenheim had the idea of playing colonoscopy footage on a loop at the Orphist exhibition (endless Delaunays, largely tedious) is literally a genius and I want to kiss them. One a these days I will spend some time getting into the Duchamp spirit but not today. Francis Picabia made me crazy in the goog this is my picture, literally a painting that is a poem.
+    A fetish for no time but later (the imp(o/a)ssible future). Lettre a un prêt: je n'ai aucune expérience du priere. Caffé et croissant s'il vous plaît. Look forward to my debut trip-hop EP, The Philosophy of Rick and Morty. I read a book by Oxana Timofeeva <i>SOLAR POLITICS</i> which makes a case for the sun as a comrade, and I want to believe that in the seasonal murk, but it's hard for me to see beyond sun-worship in the fascistic sense (L'etat; le tat), the black sun. Munch's sun? I guess probably the Chinese sun people know. When I went to MOMA it kicked me in the head and said remember this matters dickhead &amp; I said yes sir of course sir; the met was a bit of a letdown by comparison. Whichever curator at the Guggenheim had the idea of playing colonoscopy footage on a loop at the Orphist exhibition (endless Delaunays, largely tedious) is literally a genius and I want to kiss them. Lately I been bumpin Silver Jews - WE COULD BE LOOKING FOR THE SAME THING (white boy mode); Terre Thaemlitz's MIDTOWN 120 BLUES if you can find it anywhere (i have a link if y want); Sophia Bel (NO MORE)(not the remix); adored Lael Neale for a while now; John Roseboro I tend to say damn this is so good what's the catch; +1 to Yara Asmar, whom I want to score film after film; every time I hear Reggie Pearl - Ode to Neptune I say oh yeah this is pretty much how music could be. One a these days you could follow me back on spotify (bitch); one a these days I will spend some time getting into the Duchamp spirit but not today. Francis Picabia made me crazy in the goog this is my picture, literally a painting that is a poem.
 
 </p>
 
-<center><img src="Clutter/Pics/Picabia.jpg" width="500px">1913</center>
+<center><img src="Picabia.jpg" width="500px">1913</center>
 
 <p>
 
     Have attempted to add images to this site to illustrate certain points and make others on their own but they may not load, my html skills are so fresh and baby bunny. They would've been 1. A man testing the (non-functional) Tsar Bell, but primarily modelling, or emoting. He's stimming, soooo aware of himself before the camera, or maybe it's the photographer's fault; 2. The 1942 photograph of Wanbu Huayanjing pagoda in Hohhot; 3. A t-shirt which reads 'I am NICE and also RICH' worn by a child playing football in the Georgian film WHAT DO WE SEE WHEN WE LOOK AT THE SKY (2021); 4. A small girl's interpretation of my cocktail menu; 5. Matisse's sketch of Polyphemus, pure eroticism, look at his right hand, I like to imagine it has a relationship with 6. Chagall's seven-fingered self-portrait; 7. A school of squat lobsters, all fleshy and handy, get real close to this one; 8. A google maps screenshot of 'inaccessible island', by Edinburgh of the seven seas, which I noticed one time; 9. King Eystein washed overboard; 10. My seeing of Picabia's <i>Culture physique</i>; 11. A man sweeping the factory floor in <i>Tie Xie Qun</i> but somehow the floor is gloopy and stalagmitic; 12. A carillonneur, best viewed on desktop
 
-<br>
 
-<center><img src="Clutter/Pics/Tie Xie Qun.png" width="400px">1998</center>
 
-<br>
+    <center><img src="Tie Xie Qun.png" width="400px">1998</center>
 
+
+<p>
     Wat Tyler, Robert Kett, Jenny Geddes, Michael An Gof. Each over hedgerows. Types that tear me up (how the sun exploded over them). On 'inevitability' as a force, a wet feather. Sean's Firmament. Do you dream much lately (I still don't). I don't want it medical. This is thin, pictures should speak between. Do you roll your eyes at "the tyranny of lived experience"
 
-<br><br>
+</p>
 
-<center><img src="Clutter/Pics/Carillonneur.png">1612</center> 
+<center><img src="Carillonneur.png">1612</center> 
 
-<br>
+<p>
 
     My congrats if so, oh ho, I'll set you here for now, much love as always
 
