--- a/vsc leahzone.html
+++ b/vsc leahzone.html
@@ -30,7 +30,7 @@
 
 </p>
 
-    <center><img src="Tsar Bell Man.jpg" width="500px">1986</center>
+    <center><img src="Leahhtml/Tsar Bell Man.jpg" width="500px">1986</center>
 
 <p>
 
@@ -38,7 +38,7 @@
 
 </p>
 
-<center><img src="Hohhot pagoda.jpg" width="500px">1942</center>
+<center><img src="Leahhtml/Hohhot pagoda.jpg" width="500px">1942</center>
 
 <p>
 
@@ -46,7 +46,7 @@
 
 <br><br>
 
-    <img src="nice-rich.jpeg" width="400px">2021 <img src="cocktail crayon.jpeg" height="400px">2025
+    <img src="Leahhtml/nice-rich.jpeg" width="400px">2021 <img src="Leahhtml/cocktail crayon.jpeg" height="400px">2025
 
 <br><br>
 
@@ -55,7 +55,7 @@
     
 <br><br>
 
-<img src="matisse polyphemus.jpeg" width="400px">1935 <img src="chagall 7 fingers.jpeg" width="420px">1913
+<img src="Leahhtml/matisse polyphemus.jpeg" width="400px">1935 <img src="Leahhtml/chagall 7 fingers.jpeg" width="420px">1913
 
 <br>
 
@@ -68,7 +68,7 @@
 
 </p>
 
-<img src="squat lobster.jpeg" width="500px">2006 <img src="Eystein.jpg" width="500px">c.800
+<img src="Leahhtml/squat lobster.jpeg" width="500px">2006 <img src="Leahhtml/Eystein.jpg" width="500px">c.800
 
 <p>
 
@@ -76,7 +76,7 @@
 
 </p>
 
-<center><img src="inaccessible island.png" width="500px">2023</center> 
+<center><img src="Leahhtml/inaccessible island.png" width="500px">2023</center> 
 
 <p>
 
@@ -84,7 +84,7 @@
 
 </p>
 
-<center><img src="Picabia.jpg" width="500px">1913</center>
+<center><img src="Leahhtml/Picabia.jpg" width="500px">1913</center>
 
 <p>
 
@@ -92,7 +92,7 @@
 
 
 
-    <center><img src="Tie Xie Qun.png" width="400px">1998</center>
+    <center><img src="Leahhtml/Tie Xie Qun.png" width="400px">1998</center>
 
 
 <p>
@@ -100,7 +100,7 @@
 
 </p>
 
-<center><img src="Carillonneur.png">1612</center> 
+<center><img src="Leahhtml/Carillonneur.png">1612</center> 
 
 <p>
 
