--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-    
+
 <head>
-    
+
     <meta charset="UTF-8" />
     <title>LEAHZONE</title>
 
@@ -57,7 +57,8 @@
 
     <p>
 
-        <span class="Point">Point</span> being I'm all over it. Jump through the hoops, har har, here we are all the same. Some days I think about
+        <span class="Point">Point</span> being I'm all over it. Jump through the hoops, har har, here we are all the
+        same. Some days I think about
         expressing how I feel (cringe+blocked) and I think back, recursively, to the word FUG as it appears in this
         (also private-public) communication on <a href="https://granta.com/in-conversation-collins-harris/">granta</a>.
         There's something super unwieldy about it, like, whatareyouguys<i>talking</i>about, partly because I'm thinking
@@ -91,7 +92,8 @@
         in the mood hardly ever to read wank. I hate all the curlews-and-lakes pomposity about as much as I'm against
         all these public school ass faces (plenty). The amount of award-winning poets I met who grew up in Dubai or have
         an uncle writing for the observer, the lrb, I groan I gurgle. Look I know it's hardly news. Right now I've the
-        patience pretty much only for Sean Bonney and only in small doses and because he's dead in a really modern way.***
+        patience pretty much only for Sean Bonney and only in small doses and because he's dead in a really modern
+        way.***
         You've encountered, he's that fella what did the fuck the police poem (which you can find in the lovely
         <i>Letters Against the Firmament</i> and which I steal from). I have a pdf of his last book, <i>Our Death</i>,
         if you want. He's propa Bri'ish but was one of them that moved to Berlin (under the cover of 'academic'
@@ -99,7 +101,8 @@
         destination for the euroyuppie, or was, until covid and it seems to have been dethroned, for where I know not.
         When I was in B a couple years ago I liked it in ways &amp; was there on my own walking stomping but felt I held
         it all at arms length. The flaneur (he/him) must wa(l/n)k off his century. I'm not calling Sean one of those.
-        He's the only radical poet the uk ever produced that I can think of right now (I'm not trying).**** Whose radical
+        He's the only radical poet the uk ever produced that I can think of right now (I'm not trying).**** Whose
+        radical
         huh, your radical, my radical? The radicle ruticle cuticle? While ago I read a eulogy for SB by I think Fran
         Lock (whom I like) which breathlessly described him as 'a European'. Of course I blehhhhhhhed about this, such a
         wanky FBPE-y sentiment, the kind you can only really get in british 'politics'.***** Let us rub ourselves to the
@@ -123,7 +126,7 @@
         get a mishmash Cyrillic is just a treat. I've gotta end up Belgrade one of these days. The political is only
         ever the useless right (right)? To confess something big: I get a line from ms Anne Boyer running around in my
         head often enough. Closing her poem a woman shopping: <i>how could it [this book] be literature if it is not
-        coyly against literature, but sincerely against it, as it is also against ourselves?</i> It's almost glib,
+            coyly against literature, but sincerely against it, as it is also against ourselves?</i> It's almost glib,
         but not quite, and troubling in the way climate change seems (to me, a white brit)(this is a total non-sequitur
         and entirely personal). Cheaply, 'against' can be spatialised and horny &amp; maybe there's a sidelong look at
         that but I don't think Anne's fully interested in entertaining it, what's being said is more complicated and
@@ -149,8 +152,8 @@
 
         In nyc lately I made a short film entitled HE FORGETS THE SHARK which I find neato it's predictably ambient
         &amp; I kept the shot lengths loooong, it's about dreams and feet and sharks. But I don't think it's going
-        anywhere I was initially going to publish it or have it published but I got too pissed off (collective emotive
-        atmospheres, karmic imbalances) so it'll sit as an .mp4 for longer. Film rec corner did you ever see the Radu
+        anywhere I was initially going to publish it or have it published but I got too pissed off (collective emotions,
+        karmic imbalances) so it'll sit as an .mp4 for longer. Film rec corner did you ever see the Radu
         Jude film do not expect too much from the end of the world - that Romanian moment, he's (Jude) a personality I
         guess but I'm into it as ultra contemporary collapse, eastern european antinato outside the eu, border border
         war type cinema. Some cheap shots but overall worthwhile. The lead character (Angela)'s contenty parodies of
@@ -212,7 +215,8 @@
         footage on a loop at the Orphist exhibition (endless Delaunays, largely tedious) is literally a genius and I
         want to kiss them. Lately I been bumpin Silver Jews - WE COULD BE LOOKING FOR THE SAME THING (white boy mode);
         Terre Thaemlitz's MIDTOWN 120 BLUES if you can find it anywhere (i have a link if y want); Sophia Bel (NO
-        MORE)(not the remix); adored Lael Neale for a while now; anything by Rachel Grimes; John Roseboro I tend to say damn this is so good what's
+        MORE)(not the remix); adored Lael Neale for a while now; anything by Rachel Grimes; John Roseboro I tend to say
+        damn this is so good what's
         the catch; +1 to Yara Asmar, whom I want to score film after film; every time I hear Reggie Pearl - Ode to
         Neptune I say oh yeah this is pretty much how music could be. One a these days you could follow me back on
         spotify (bitch); one a these days I will spend some time getting into the Duchamp spirit but not today. Francis
