--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         Terre Thaemlitz's MIDTOWN 120 BLUES if you can find it anywhere (i have a link if y want); Sophia Bel (NO
         MORE)(not the remix); adored Lael Neale for a while now; anything by Rachel Grimes; John Roseboro I tend to say
         damn this is so good what's
-        the catch; +1 to Yara Asmar, whom I want to score film after film; every time I hear Reggie Pearl - Ode to
+        the catch; +1 to Yara Asmar, whom I want to score film after film; check <a href="https://www.youtube.com/watch?v=cMCg249fZ7o&list=TLPQMjgwMjIwMjVA7UV8PSh4Fg&index=2"> this</a> shit out; every time I hear Reggie Pearl - Ode to
         Neptune I say oh yeah this is pretty much how music could be. One a these days you could follow me back on
         spotify (bitch); one a these days I will spend some time getting into the Duchamp spirit but not today. Francis
         Picabia made me crazy in the goog this is my picture, literally a painting that is a poem.
