--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         it all at arms length. The flaneur (he/him) must wa(l/n)k off his century. I'm not calling Sean one of those.
         He's the only radical poet the uk ever produced that I can think of right now (I'm not trying).**** Whose
         radical
-        huh, your radical, my radical? The radicle ruticle cuticle? While ago I read a eulogy for SB by I think Fran
+        huh, your radical, my radical? The radicle ruticle cuticle? Hey wacky dawg say something funny. While ago I read a eulogy for SB by I think Fran
         Lock (whom I like) which breathlessly described him as 'a European'. Of course I blehhhhhhhed about this, such a
         wanky FBPE-y sentiment, the kind you can only really get in british 'politics'.***** Let us rub ourselves to the
         thought of the west. West a territory entirely composed of last bastions, and which it is the job of liberalism
@@ -180,7 +180,7 @@
         Maybe I'm sensitive because there's none around here but public art in America is electric even when it's bad or
         in poor taste, that is, it does its job as public art, it's seen, it is (it's).****** Stared at the pigeon
         DINOSAUR on 10th ave and found it crass, obvious, insta-thirsty sculpture, but got to think nicely about how and
-        why nonetheless. Awful sick of the first person pronoun by now. The british psyche getting me down, it's
+        why nonetheless. Awful sick of the first person pronoun by now. The britpsyche getting me down, it's
         scanning nasty &amp; nastiness as inhabited modes, while the generous or outgoing are incidental &amp;
         contingent on others going out they way to serve. Serve serve. Off'l depressing this site. I really understand
         very little about Australia, something about a country with a yawning abyss at its heart in a
@@ -236,8 +236,8 @@
         WE LOOK AT THE SKY (2021); 4. A small girl's interpretation of my cocktail menu; 5. Matisse's sketch of
         Polyphemus, pure eroticism, look at his right hand, I like to imagine it has a relationship with 6. Chagall's
         seven-fingered self-portrait; 7. A school of squat lobsters, all fleshy and handy, get real close to this one;
-        8. A google maps screenshot of 'inaccessible island', by Edinburgh of the seven seas, which I noticed one time;
-        9. King Eystein washed overboard; 10. My seeing of Picabia's <i>Culture physique</i>; 11. A man sweeping the
+        8. King Eystein washed overboard; 9. A google maps screenshot of 'inaccessible island', by Edinburgh of the seven seas, which I noticed one time;
+        10. My seeing of Picabia's <i>Culture physique</i>; 11. A man sweeping the
         factory floor in <i>Tie Xie Qun</i> but somehow the floor is gloopy and stalagmitic; 12. A carillonneur, best
         viewed on desktop
 
