--- a/index.html
+++ b/index.html
@@ -106,10 +106,7 @@
         huh, your radical, my radical? The radicle ruticle cuticle? Hey wacky dawg say something funny. While ago I read a eulogy for SB by I think Fran
         Lock (whom I like) which breathlessly described him as 'a European'. Of course I blehhhhhhhed about this, such a
         wanky FBPE-y sentiment, the kind you can only really get in british 'politics'.***** Let us rub ourselves to the
-        thought of the west. West a territory entirely composed of last bastions, and which it is the job of liberalism
-        (huh?) to deusvult defend (I can walk) is that right am I alluding to the eastern front (which one). So it's
-        cool and trendy to say we must defend 'our' 'borders' from the faceless eastern horde &amp; the right seem to
-        say but we like the horde the horde stronk. But this is all a recent development and entirely factual. 'And to
+        thought of the west. West a territory entirely composed of last bastions, (I can walk) is that right am I alluding to the eastern front (which one). But this is all a recent development and entirely factual. 'And to
         see them is to stroke ourselves'. Cow-boy dreams. How did I get here. I hope you are well. In light - in light
         of recent events.
 
