--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         china. Basically every drug is rly boring. The first world and its problems (it's problems). I guess through my
         time watching <a
             href="https://www.youtube.com/watch?v=SaXNDbr16rs&amp;list=PLJUn5ZRCEXamUuAOpJ5VyTb0PA5_Pqlzw&amp;index=80">Logistics</a>
-        and <a href="https://www.youtube.com/watch?v=M4oxipESPtk">Tie Xie Qun</a>, all the names of cities have dangled
+        and <a href="https://www.youtube.com/watch?v=M4oxipESPtk">Tie Xie Qu</a>, all the names of cities have dangled
         about my brain. Not that these are seductive representations. A heart-shaped vocabulary in Hohhot, in Shenyang.
         Why are coffee machines so expensive it's not like they're performing a particularly difficult function.
 
