--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         seven-fingered self-portrait; 7. A school of squat lobsters, all fleshy and handy, get real close to this one;
         8. King Eystein washed overboard; 9. A google maps screenshot of 'inaccessible island', by Edinburgh of the seven seas, which I noticed one time;
         10. My seeing of Picabia's <i>Culture physique</i>; 11. A man sweeping the
-        factory floor in <i>Tie Xie Qun</i> but somehow the floor is gloopy and stalagmitic; 12. A carillonneur, best
+        factory floor in <i>Tie Xie Qu</i> but somehow the floor is gloopy and stalagmitic; 12. A carillonneur, best
         viewed on desktop
 
 
