--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         (spake the jolly philanthropist). This evening I am managing bars and my parents are to eat something that calls
         itself 87% british chicken. Le society methinks???? I go back and back and throw up about poetry because I'm not
         in the mood hardly ever to read wank. I hate all the curlews-and-lakes pomposity about as much as I'm against
-        all these public school ass faces (plenty). The amount of award-winning poets I met who grew up in Dubai or have
+        all these public school ass faces (plenty). The amount of belaurelled poets I met who grew up in Dubai or have
         an uncle writing for the observer, the lrb, I groan I gurgle. Look I know it's hardly news. Right now I've the
         patience pretty much only for Sean Bonney and only in small doses and because he's dead in a really modern
         way.***
@@ -192,7 +192,7 @@
         De Certeau, Lefebvre, Auge. Vermeulen has an article in Frieze which dredges them but I don't find him super
         successful.******* You remember. 'And to see them is to grow ourselves'. Sorry to bring up deleuze again I live
         in permanent denial & purely because everybody I've ever spoken to about D&G irl (at length) have been
-        insufferable. At work politics goes as far as somebody saying I love AI it is so funny. Maybe that's the rest of
+        insufferable. In Jon Roffe's (good!) companion to deleuze (vol.1) there's a bit where he's creaming about my bloody valentine the band & it really tickles me. At work politics goes as far as somebody saying I love AI it is so funny. Maybe that's the rest of
         the world. Get outta zenandrughs. Look I never made my peace with Goethe.
 
     </p>
@@ -205,7 +205,7 @@
         priere. Caffé et croissant s'il vous plaît. Look forward to my debut trip-hop EP, The Philosophy of Rick and
         Morty. I read a book by Oxana Timofeeva <i>SOLAR POLITICS</i> which makes a case for the sun as a comrade, and I
         want to believe that in the seasonal murk, but it's hard for me to see beyond sun-worship in the fascistic sense
-        (L'etat; le tat), the black sun. Munch's sun? I guess probably the Chinese sun people know. When I went to MOMA
+        (L'etat; le tat), the black sun. Munch's sun? I guess probably the Chinese sun people know; the fusionists. When I went to MOMA
         it kicked me in the head and said remember this matters dickhead &amp; I said yes sir of course sir; the met was
         a bit of a letdown by comparison. Whichever curator at the Guggenheim had the idea of playing colonoscopy
         footage on a loop at the Orphist exhibition (endless Delaunays, largely tedious) is literally a genius and I
