--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         footage on a loop at the Orphist exhibition (endless Delaunays, largely tedious) is literally a genius and I
         want to kiss them. Lately I been bumpin Silver Jews - WE COULD BE LOOKING FOR THE SAME THING (white boy mode);
         Terre Thaemlitz's MIDTOWN 120 BLUES if you can find it anywhere (i have a link if y want); Sophia Bel (NO
-        MORE)(not the remix); adored Lael Neale for a while now; anything by Rachel Grimes; John Roseboro I tend to say
+        MORE)(not the remix); adored Lael Neale for a while now; anything by Rachel Grimes; Galerie Schallschutz's MONTAUK PROJECT is a perfect album; John Roseboro I tend to say
         damn this is so good what's
         the catch; +1 to Yara Asmar, whom I want to score film after film; check <a href="https://www.youtube.com/watch?v=cMCg249fZ7o&list=TLPQMjgwMjIwMjVA7UV8PSh4Fg&index=2"> this</a> shit out; every time I hear Reggie Pearl - Ode to
         Neptune I say oh yeah this is pretty much how music could be. One a these days you could follow me back on
