--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         MORE)(not the remix); adored Lael Neale for a while now; anything by Rachel Grimes; Galerie Schallschutz's MONTAUK PROJECT is a perfect album; John Roseboro I tend to say
         damn this is so good what's
         the catch; +1 to Yara Asmar, whom I want to score film after film; check <a href="https://www.youtube.com/watch?v=cMCg249fZ7o&list=TLPQMjgwMjIwMjVA7UV8PSh4Fg&index=2"> this</a> shit out; every time I hear Reggie Pearl - Ode to
-        Neptune I say oh yeah this is pretty much how music could be. Sluice's RADIAL GATE is a real nice 26-minute album (esp ACTS 9:3; NEW LEICESTER) if you're up for folky country type, it's kind of an evening listen. Probly you noticed the attention Cameron Winter's album Heavy Metal got when it came out but, to reiterate, I like it. One a these days you could follow me back on
+        Neptune I say oh yeah this is pretty much how music can lovely. Sluice's RADIAL GATE is a real nice 26-minute album (esp ACTS 9:3; NEW LEICESTER) if you're up for folky country type, it's kind of an evening listen. Probly you noticed the attention Cameron Winter's album Heavy Metal got when it came out but, to reiterate, I like it. One a these days you could follow me back on
         spotify (bitch); one a these days I will spend some time getting into the Duchamp spirit but not today. Francis
         Picabia made me crazy in the goog this is my picture, literally a painting that is a poem.
 
