--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
     would have a fit. What does it mean to be overeducated. <br>
     <br>
     *** <br>
-    For transparency, I also been tinkering with Simone White & Fred Moten Fred Moten Fred Moten <br>
+    For transparency, I also been tinkering with Simone White & Fred Moten Fred Moten Fred Moten. I been reading Baraka again bc I'm confident he matters <br>
     <br>
     **** <br>
     A Baraka guy among other things. That's his neighbourhood <br>
