--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         has stuck me deeper, and probably for the worse. Don't tell me it ironically works because it's inarticulate
         &amp; redundant. This is all to preface or forestall my point that I am full of disappointments lately and all
         my lives feel horribly disrupted, doing my best to avoid the white boy crashout of tryna see if I can move to
-        china. Basically every drug is rly boring. The first world and its problems (it's problems). I guess through my
+        china. The first world and its problems (it's problems). I guess through my
         time watching <a
             href="https://www.youtube.com/watch?v=SaXNDbr16rs&amp;list=PLJUn5ZRCEXamUuAOpJ5VyTb0PA5_Pqlzw&amp;index=80">Logistics</a>
         and <a href="https://www.youtube.com/watch?v=M4oxipESPtk">Tie Xie Qu</a>, all the names of cities have dangled
